--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/960.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/color.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen">
-  </head>
+  </head>f
   <body>
     <section class="heading">
       <h1>My Site <small>to learn about CSS color and text</small></h1>
